# AndroidOpenCVGradlePlugin

./: LICENSE  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
plugin/: build.gradle
plugin/src/main/resources/: messages.properties
plugin/src/main/resources/META-INF.gradle-plugins/: com.ahasbini.android-opencv-gradle-plugin.properties
plugin/src/main/resources/build-cache-scripts/: CMakeLists.txt  build.gradle  settings.gradle
plugin/src/test/resources/: PluginTest_testMissingAndroidPlugin_build.gradle  PluginTest_testMissingAndroidPlugin_settings.gradle  SimpleGradleTest_testHelloWorldTask_build.gradle
plugin/src/test/resources/AndroidPluginTest_testPreBuildBeingFirstTask/: build.gradle
plugin/src/test/resources/PluginTest_testEmptyAndroidOpenCVVersion/: build.gradle
plugin/src/test/resources/PluginTest_testMissingAndroidOpenCVVersion/: build.gradle
plugin/src/test/resources/PluginTest_testMissingAndroidPluginWithApplyPlugin/: build.gradle  settings.gradle
plugin/src/test/resources/PluginTest_testMissingAndroidPluginWithPluginsDsl/: build.gradle  settings.gradle
plugin/src/test/resources/PluginTest_testSuccessfulBuildWithCustomUrlWithDryRun/: build.gradle
plugin/src/test/resources/PluginTest_testSuccessfulConsecutiveBuildsWithDryRun/: settings.gradle
sample/: CMakeLists.txt  build.gradle  ndk-stl-config.cmake
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/ahasbini/sample/: MainActivity.java
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/values/: strings.xml
(+61 files in other folders)
